# foundry

./: Cargo.toml  Cargo.toml.workspace  README.md  stream-window.sh
foundry-player/: Cargo.toml
foundry-player/src/: audio_decoder.rs  demuxer.rs  main.rs  player.html
src/: audio.js  audio_capture.rs  audio_mixer.rs  audio_worklet.js  gui.js  main.rs  recording.rs  root.html  root.js  screen.html  screen.js  session.rs  stats.js  video.js  video_pipeline.rs  video_worker.js
window-pick/: Cargo.toml
window-pick/src/: main.rs
