[package]
name = "foundry"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Martin Casado"]
description = "A fast screen streaming server using H.264 over WebSocket"
repository = "https://github.com/mcasado/foundry"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.8", features = ["macros", "ws"] }
futures-util = "0.3.31"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
tokio = { version = "1.48.0", features = ["full"] }
xcap = { version = "0.8.0", features = ["image"] }
openh264 = { version = "0.4", optional = true }
openh264-sys2 = { version = "0.4", optional = true }
cpal = "0.15"

[features]
default = ["openh264-encoder"]
openh264-encoder = ["openh264", "openh264-sys2"]

[profile.release]
lto = true
codegen-units = 1
strip = true

