[package]
name = "window-pick"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Martin Casado"]
description = "Click on a window to get its ID and metadata"

[[bin]]
name = "window-pick"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
